--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
+		"firebase": "^7.14.3",
 		"mongoose": "^5.9.13",
 		"morgan": "^1.10.0",
 		"node-sass": "^4.14.0",
