--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,10 @@
 		"passport-local": "^1.0.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.1",
+		"redux": "^4.0.5",
 		"reset-css": "^5.0.1",
 		"shuffle": "^0.2.2"
 	},
