--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.6.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.13",
