--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
+		"@types/jest": "^26.0.9",
 		"axios": "^0.19.2",
 		"bcrypt": "^4.0.1",
 		"bcryptjs": "^2.4.3",
@@ -56,6 +57,7 @@
 		]
 	},
 	"devDependencies": {
-		"concurrently": "^5.2.0"
+		"concurrently": "^5.2.0",
+		"react-test-renderer": "^16.13.1"
 	}
 }
